--- a/src/views/package.html
+++ b/src/views/package.html
@@ -140,6 +140,7 @@
 
       <!-- Multiple Users -->
       <h3>ยูสเซอร์ที่จะรับโค้ด:</h3>
+      <p>กรอกข้อมูล : ยูสเซอร์/จำนวนโค้ด</p>
       <div id="userList" class="user-list"></div>
       <button class="add-user-btn" onclick="addUserInput()">➕ เพิ่มยูสเซอร์</button>
 
